<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@id/notificationSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/appPackageInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="com.vendor.gdmss"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/keywordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/keyword_label"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/appPackageInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/toneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tone_label"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/keywordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/repeatInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_label"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/toneInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/repeatInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
